--- a/package.json
+++ b/package.json
@@ -71,15 +71,18 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.6",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
+    "react-native-sass-transformer": "^3.0.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "sass": "^1.86.3",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
