--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@legendapp/motion": "^2.4.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "^1.8.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
