--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "~0.17.3",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "18.3.1",
