--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,8 +21,11 @@
     "import/namespace": 0,
     "import/export": 0,
     "no-duplicate-imports": "warn",
-    "@typescript-eslint/no-require-imports": "off",
-    "@typescript-eslint/array-type": "off",
+    "@typescript-eslint/no-require-imports": 0,
+    "@typescript-eslint/array-type": 0,
+    "@typescript-eslint/ban-ts-comment": 0,
+    "object-shorthand": 0,
+
     "import/no-cycle": ["warn", { "maxDepth": 1 }]
   },
   "env": {
